--- a/src/views/games/show.ejs
+++ b/src/views/games/show.ejs
@@ -17,71 +17,79 @@
         <main>
             <%- include('../partials/flash') %>
                 <div class="position-relative overflow-hidden text-center">
-                    <div class="w-100 h-100 position-absolute bg"
-                        style="background-image: url('https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg')">
-                    </div>
-                    <div class="d-flex">
-                        <div class="w-25 h-50">
-                            <% if (game.cover) {%>
-                                <img src="https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg"
-                                    class="card-img-top p-3" alt="...">
-                                <% } else { %>
-                                    <img src="https://images.unsplash.com/photo-1595452767427-0905ad9b036d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
-                                        class="card-img-top p-3" alt="...">
-                                    <% } %>
+                    <% if (game.cover) { %>
+                        <div class="w-100 h-100 position-absolute bg"
+                            style="background-image: url('https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg')">
                         </div>
-                        <div class="w-50 h-50 p-4 p-md-5 mb-4 text-white">
-                            <div class="col-md-6 px-0">
-                                <h1 class="diplay-4 fst-italic">
-                                    <%= game.name %>
-                                </h1>
-                                <p class="lead">
-                                    <%= date %>
-                                </p>
-                                <p>
-                                    <% for (let i=0; i < game.genres.length - 1; i++){ %>
-                                        <%= game.genres[i].name %>,
-                                            <% } %>
-
-                                                <%= game.genres[game.genres.length - 1].name %>
-                                </p>
-                                <p>
-                                    <% for (let i=0; i < game.platforms.length - 1; i++){ %>
-                                        <%= game.platforms[i].name %>,
-                                            <% } %>
-
-                                                <%= game.platforms[game.platforms.length - 1].name %>
-                                </p>
-                                <% if (currentUser && (!favorites.includes(game.id))) {%>
-                                    <form action="/profiles/<%=user.id%>/favorites?_method=PUT" method="POST"
-                                        class="mb-3 validated-form" novalidate>
-                                        <input type="hidden" name="_csrf" value="<%= csurfToken %>">
-                                        <input type="hidden" name="game" value="<%=game.id%>">
-                                        <button class="w-100 btn btn-lg btn-secondary">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                                                fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-                                                <path
-                                                    d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                                                <path
-                                                    d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-                                            </svg>
-                                            Add to Favorites</button>
-                                    </form>
-                                    <% } %>
+                        <% } else { %>
+                            <div class="w-100 h-100 position-absolute bg"
+                                style="background-image: url('https://images.unsplash.com/photo-1595452767427-0905ad9b036d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80')">
                             </div>
-                        </div>
-                        <div class="w-25 h-50 text-white">
-                            <svg class="bd-placeholder-img rounded-circle mt-5" width="140" height="140"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="<%=color%>"></rect><text x="40%" y="50%"
-                                    fill="<%=text%>" dy=".3em" style="height: 140px;">
-                                    <%- Math.round(game.rating) %>%
-                                </text>
-                            </svg>
-                        </div>
-                    </div>
+                            <% } %>
+                                <div class="d-flex">
+                                    <div class="w-25 h-50">
+                                        <% if (game.cover) {%>
+                                            <img src="https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg"
+                                                class="card-img-top p-3" alt="...">
+                                            <% } else { %>
+                                                <img src="https://images.unsplash.com/photo-1595452767427-0905ad9b036d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
+                                                    class="card-img-top p-3" alt="...">
+                                                <% } %>
+                                    </div>
+                                    <div class="w-50 h-50 p-4 p-md-5 mb-4 text-white">
+                                        <div class="col-md-6 px-0">
+                                            <h1 class="diplay-4 fst-italic">
+                                                <%= game.name %>
+                                            </h1>
+                                            <p class="lead">
+                                                <%= date %>
+                                            </p>
+                                            <p>
+                                                <% for (let i=0; i < game.genres.length - 1; i++){ %>
+                                                    <%= game.genres[i].name %>,
+                                                        <% } %>
+
+                                                            <%= game.genres[game.genres.length - 1].name %>
+                                            </p>
+                                            <p>
+                                                <% for (let i=0; i < game.platforms.length - 1; i++){ %>
+                                                    <%= game.platforms[i].name %>,
+                                                        <% } %>
+
+                                                            <%= game.platforms[game.platforms.length - 1].name %>
+                                            </p>
+                                            <% if (currentUser && (!favorites.includes(game.id))) {%>
+                                                <form action="/profiles/<%=user.id%>/favorites?_method=PUT"
+                                                    method="POST" class="mb-3 validated-form" novalidate>
+                                                    <input type="hidden" name="_csrf" value="<%= csurfToken %>">
+                                                    <input type="hidden" name="game" value="<%=game.id%>">
+                                                    <button class="w-100 btn btn-lg btn-secondary">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                            fill="currentColor" class="bi bi-plus-circle"
+                                                            viewBox="0 0 16 16">
+                                                            <path
+                                                                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                                            <path
+                                                                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                                                        </svg>
+                                                        Add to Favorites</button>
+                                                </form>
+                                                <% } %>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 h-50 text-white">
+                                        <svg class="bd-placeholder-img rounded-circle mt-5" width="140" height="140"
+                                            xmlns="http://www.w3.org/2000/svg" role="img"
+                                            aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice"
+                                            focusable="false">
+                                            <title>Placeholder</title>
+                                            <rect width="100%" height="100%" fill="<%=color%>"></rect><text x="40%"
+                                                y="50%" fill="<%=text%>" dy=".3em" style="height: 140px;">
+                                                <%- Math.round(game.rating) %>%
+                                            </text>
+                                        </svg>
+                                    </div>
+                                </div>
                 </div>
                 <div class="w-100 mb-5 card text-center m-auto">
                     <div class="card-header">
